# respeaker-websockets

./: CMakeLists.txt  README.md  build.sh  config.json  ecosystem.config.js
include/: MqttTransport.hpp  RespeakerCore.hpp  WSTransport.hpp  animation.h  cAPA102.h  common.h  config.hpp  log.hpp  main.hpp  pixel_ring.hpp  respeaker_core.hpp  respeakerws.hpp  sound_controller.hpp  state_handler.h  verbose.h  ws_transport.hpp
src/: RespeakerCore.cpp  animation.c  cAPA102.c  cAPA102.h  config.cpp  config.hpp  config.json  gpio_rw.c  log.cpp  main.cpp  pixel_ring.cpp  pixel_ring.hpp  respeaker_core.cpp  respeaker_core.hpp  respeakerws.cpp  sound_controller.cpp  state_handler.c  verbose.c  verbose.h  ws_transport.cpp  ws_transport.hpp
